--- a/index.html
+++ b/index.html
@@ -38,6 +38,36 @@
             </nav>
             <!--Fim nav  -->
         </header><!-- Fim header -->
+        <div id="principal">
+            <!-- Inicio principal-->
+            <div id="conteudo">
+                <section id="capa">
+                    <img src="./imagens/museu.png">
+
+                </section>
+            </div>
+            <aside>
+                <section id="depoimento">
+                    <img src="./imagens/depoimento.png">
+
+                </section>
+                <section id="visita">
+                    <h4>Faça uma Visita</h4>
+                    <form>
+                        <fieldset>
+                            <legend>Selecione uma data</legend>
+                            <label for="data">Data</label>
+                            <input type="text" id="data" value="dd/mm/aaaa">
+
+                            <label for="qtd">Quantidade de Pessoas</label>
+                            <input type="text" id="qtd" value="1">
+                        </fieldset>
+                        <input type="submit" value="verificar disponibilidade">
+                    </form>
+                </section>
+            </aside>
+        </div><!-- Fim principal -->
+
     </div>
     <!--Fim container  -->
 </body>
