--- a/index.html
+++ b/index.html
@@ -52,18 +52,26 @@
 
                 </section>
                 <section id="visita">
+                    <!-- Início seção visita -->
                     <h4>Faça uma Visita</h4>
                     <form>
                         <fieldset>
                             <legend>Selecione uma data</legend>
                             <label for="data">Data</label>
-                            <input type="text" id="data" value="dd/mm/aaaa">
+                            <input class="campo" type="text" id="data" value="dd/mm/aaaa">
 
-                            <label for="qtd">Quantidade de Pessoas</label>
-                            <input type="text" id="qtd" value="1">
+                            <label for="qtd">Qtd pessoas</label>
+                            <input class="campo" style="width:25px;" type="text" id="qtd" value="1">
                         </fieldset>
-                        <input type="submit" value="verificar disponibilidade">
+                        <input class="botao" type="submit" value="Verificar disponibilidade">
                     </form>
+                </section><!-- Fim seção visita -->
+                <section id="galeria">
+                    <h4>Galeria de fotos</h4>
+                    <a href=""><img src="./imagens/imagem1.jpg" height="93" width="93" alt="museu descrever"></a>
+                    <a href=""><img src="./imagens/imagem2.jpg" height="93" width="93" alt="museu descrever"></a>
+                    <a href=""><img src="./imagens/imagem3.jpg" height="93" width="93" alt="museu descrever"></a>
+                    <a href=""><img src="./imagens/imagem4.jpg" height="93" width="93" alt="museu descrever"></a>
                 </section>
             </aside>
         </div><!-- Fim principal -->
