--- a/index.html
+++ b/index.html
@@ -41,12 +41,51 @@
         <div id="principal">
             <!-- Inicio principal-->
             <div id="conteudo">
+                <!-- início conteúdo -->
                 <section id="capa">
                     <img src="./imagens/museu.png">
+                </section>
+                <section id="postagens">
+                    <article id="video">
+                        <h3>Vídeo: Conheça o museu</h3>
+                        <iframe width="310" height="170" src="https://www.youtube.com/embed/RGUYb-hivrc"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </article>
+                    <article id="mapa">
+                        <h3>Mapa: Encontre o museu</h3>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14700.49781746813!2d-43.18441891849861!3d-22.908779996026322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f603157e2a9%3A0x9efa1a430324038c!2sMuseu%20Nacional%20de%20Belas%20Artes!5e0!3m2!1spt-BR!2sbr!4v1646851757093!5m2!1spt-BR!2sbr"
+                            width="310" height="170" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </article>
+                    <article id="exposicoes">
+                        <h3>Exposições</h3>
+                        <ul>
+                            <li><a href="#">Os assustadores insetos</a></li>
+                            <li><a href="#">O crânio de Luzia, a mulher mais antiga do Brasil</a></li>
+                            <li><a href="#">Preguiça gigante e tigre-dentes-de-sabre</a></li>
+                            <li><a href="#">Plantas do Brasil Central</a></li>
+                            <li><a href="#">Tereza Cristina: A Imperatriz Arqueóloga</a></li>
+                            <li><a href="#">Arte com Dinossauros</a></li>
+                            <li><a href="#"><strong>Veja todos (65) </strong></a></li>
+                        </ul>
+                    </article>
+                    <article id="historia">
+                        <h3>Sobre o Museu</h3>
+                        <p>
+                            Possui mais de 6.733,84 metros quadrados de áreas de exposição, com 1.797,32 metros
+                            quadrados de reservas técnicas. Além dos espaços de exposição e setores administrativos, o
+                            museu possui um Departamento de Conservação e Restauração, com laboratórios para trabalhos
+                            de pintura e papel, as Reservas Técnicas e a Oficina de Molduras e Gesso
+                        </p>
+                        <a href="#"><strong>Leia mais</strong></a>
+                    </article>
 
                 </section>
-            </div>
+            </div><!-- Fim conteúdo -->
             <aside>
+                <!-- Início aside -->
                 <section id="depoimento">
                     <img src="./imagens/depoimento.png">
 
@@ -67,13 +106,28 @@
                     </form>
                 </section><!-- Fim seção visita -->
                 <section id="galeria">
+                    <!-- Início galeria -->
                     <h4>Galeria de fotos</h4>
                     <a href=""><img src="./imagens/imagem1.jpg" height="93" width="93" alt="museu descrever"></a>
                     <a href=""><img src="./imagens/imagem2.jpg" height="93" width="93" alt="museu descrever"></a>
                     <a href=""><img src="./imagens/imagem3.jpg" height="93" width="93" alt="museu descrever"></a>
                     <a href=""><img src="./imagens/imagem4.jpg" height="93" width="93" alt="museu descrever"></a>
-                </section>
-            </aside>
+                </section><!-- Fim galeria -->
+            </aside><!-- Fim aside -->
+            <footer>
+                <p>
+                    <a href="#">Home</a>
+                    <a href="#">Exposições</a>
+                    <a href="#">Pesquisa</a>
+                    <a href="#">Acervo</a>
+                    <a href="#">Vídeos</a>
+                    <a href="#">Fotos</a>
+                    <a href="#">Contato</a>
+                </p>
+                <p>
+                    2019<a href="#">Museu Nacional</a>Todos os direitos reservados.
+                </p>
+            </footer>
         </div><!-- Fim principal -->
 
     </div>
